@@ -10,6 +10,7 @@ Date: ????
     - Schedule surface wide proxy update for the next tick
     - Do not draw cargo bay inventory contents
     - Listen to the surface events
+    - Fix new space platform hubs going unnoticed
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2025. 02. 28
